Fix Activity Palette visibility in GridPaint

--- a/activities/Gridpaint.activity/css/gridpaint.css
+++ b/activities/Gridpaint.activity/css/gridpaint.css
@@ -25,6 +25,5 @@ div.thumbframe {
  position: absolute;
  top: 0px;
  left: 0px;
- z-index: 100;
 }
 
